intel/bench_214/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main/log.txt
bench_214/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main.c:15:12: error: default initialization of an object of const type 'const int'
 int const ROW_SHIFT ; 
           ^
                     = 0
bench_214/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main.c:101:20: error: default initialization of an object of const type 'const int *const'
  const int *const tab;
                   ^
                       = nullptr
3 errors generated.
HLS FPGA Parse FAILED.
